applying code inspection recommendations